[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "huggingface-hub>=1.8.0",
    "nltk==3.9.1",
    "numpy>=2.4.4",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
